# repo-seatbelt

./: .gitignore  .seatbeltignore  CHANGELOG.md  CLAUDE.md  CODEX_RULES.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  seatbelt.py
.claude/skills/buckle-up/: SKILL.md
.claude/skills/pre-release/: SKILL.md
.claude/skills/safe-refactor/: SKILL.md
.github/: pull_request_template.md
.github/.github/workflows/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: ai-agent-rules.md  demo-script.md  faq.md  release-checklist.md  restore-guide.md  skills.md  social-posts.md  windows-first.md
docs/assets/: README.md
examples/demo-project/: .cursorrules  .env.example  .seatbeltignore  AGENTS.md  README.md  app.py  notes.txt  package.json.example
src/repo_seatbelt/: __init__.py  cli.py  config.py  demo.py  doctor.py  errors.py  git_utils.py  ignore.py  paths.py  report.py  restore.py  rules.py  safety.py  secrets.py  snapshot.py
tests/: test_ignore.py  test_init_rules.py  test_report_demo_cli.py  test_safety.py  test_secrets.py  test_snapshot_restore.py
