[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-seatbelt"
version = "0.1.0"
description = "Windows-first safety toolkit for AI coding agent workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RepoSeatbelt contributors" }]
keywords = ["ai", "coding-agent", "safety", "snapshot", "secrets", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
seatbelt = "repo_seatbelt.cli:main"

[project.urls]
Homepage = "https://github.com/example/repo-seatbelt"
Repository = "https://github.com/example/repo-seatbelt"
Issues = "https://github.com/example/repo-seatbelt/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
